# MT5MonteCarlo

./: CMakeLists.txt  ExcelParser.cpp  ExcelParser.h  Main.qml  MetricCard.qml  MonteCarloSimulator.cpp  MonteCarloSimulator.h  README.md  StatusBarManager.cpp  StatusBarManager.h  main.cpp  resources.qrc
.github/workflows/: release.yml
assets/logo/: mt5_monte_carlo_icon.icns
